tools/python-yasm/yasm.pyx


    cdef char* yasm_symrec_get_name(yasm_symrec *sym)
    cdef yasm_sym_vis yasm_symrec_get_visibility(yasm_symrec *sym)
    cdef yasm_expr* yasm_symrec_get_equ(yasm_symrec *sym)
    cdef int yasm_symrec_get_label(yasm_symrec *sym,
            yasm_symrec_get_label_bytecodep *precbc)
    cdef int yasm_symrec_is_special(yasm_symrec *sym)
    cdef void* yasm_symrec_get_data(yasm_symrec *sym,
            yasm_assoc_data_callback *callback)
    cdef void yasm_symrec_add_data(yasm_symrec *sym,
            yasm_assoc_data_callback *callback, void *data)
    cdef void yasm_symrec_print(yasm_symrec *sym, FILE *f, int indent_level)

cdef class Register
cdef class IntNum
cdef class FloatNum
cdef class Expression
cdef class SymbolTable
cdef class Symbol
cdef class ObjectFormat
cdef class Bytecode

cdef class Register:
    cdef size_t reg
    def __new__(self, reg):
        self.reg = reg

# TODO: rework __new__ / __int__ / __long__ to support > int values
cdef class IntNum:
    cdef yasm_intnum *intn
    def __new__(self, value, base=None):
        self.intn = NULL
        val = None
        
        if isinstance(value, IntNum):
            self.intn = yasm_intnum_copy((<IntNum>value).intn)
            return

        if isinstance(value, str):
            val = int(value, base)
        elif isinstance(value, (int, long)):
            val = value

        if val is None:
            raise ValueError

        if val < 0:
            self.intn = yasm_intnum_create_int(val)
        else:
            self.intn = yasm_intnum_create_uint(val)

    def __dealloc__(self):
        if self.intn != NULL: yasm_intnum_destroy(self.intn)

    def __int__(self):
        if yasm_intnum_sign(self.intn) < 0:
            return yasm_intnum_get_int(self.intn)
        else:
            return yasm_intnum_get_uint(self.intn)

    def __repr__(self):
        return str(int(self))

    def __op(self, op, o=None):
        lhs = IntNum(self)
        if o is None:
            yasm_intnum_calc((<IntNum>lhs).intn, op, NULL, 0)
        else:
            if isinstance(o, IntNum): rhs = o
            else: rhs = IntNum(o)
            yasm_intnum_calc((<IntNum>lhs).intn, op, (<IntNum>rhs).intn, 0)
        return lhs

    def __add__(IntNum self, o): return self.__op(YASM_EXPR_ADD, o)
    def __sub__(IntNum self, o): return self.__op(YASM_EXPR_SUB, o)
    def __mul__(IntNum self, o): return self.__op(YASM_EXPR_MUL, o)
    def __div__(IntNum self, o): return self.__op(YASM_EXPR_SIGNDIV, o)
    def __floordiv__(IntNum self, o): return self.__op(YASM_EXPR_SIGNDIV, o)
    def __mod__(IntNum self, o): return self.__op(YASM_EXPR_SIGNMOD, o)
    def __neg__(IntNum self): return self.__op(YASM_EXPR_NEG)
    def __pos__(IntNum self): return self
    def __abs__(IntNum self):
        if yasm_intnum_sign(self.intn) >= 0: return self
        else: return self.__op(YASM_EXPR_NEG)
    def __nonzero__(IntNum self): return not yasm_intnum_is_zero(self.intn)
    def __invert__(IntNum self): return self.__op(YASM_EXPR_NOT)
    #def __lshift__(IntNum self, o)
    #def __rshift__(IntNum self, o)
    def __and__(IntNum self, o): return self.__op(YASM_EXPR_AND, o)
    def __or__(IntNum self, o): return self.__op(YASM_EXPR_OR, o)
    def __xor__(IntNum self, o): return self.__op(YASM_EXPR_XOR, o)

cdef class FloatNum:
    cdef yasm_floatnum *flt
    def __new__(self, value):
        self.flt = NULL
        if isinstance(value, FloatNum):
            self.flt = yasm_floatnum_copy((<FloatNum>value).flt)
            return

        if isinstance(value, float): string = str(float)
        else: string = value
        self.flt = yasm_floatnum_create(string)

    def __dealloc__(self):
        if self.flt != NULL: yasm_floatnum_destroy(self.flt)

    def __op(self, op, o):
        if isinstance(o, FloatNum): rhs = o
        else: rhs = FloatNum(o)
        lhs = FloatNum(self)
        yasm_floatnum_calc((<FloatNum>lhs).flt, op, (<FloatNum>rhs).flt, 0)
        return lhs

    def __add__(FloatNum self, o): return self.__op(YASM_EXPR_ADD, o)
    def __sub__(FloatNum self, o): return self.__op(YASM_EXPR_SUB, o)
    def __mul__(FloatNum self, o): return self.__op(YASM_EXPR_MUL, o)
    def __div__(FloatNum self, o): return self.__op(YASM_EXPR_SIGNDIV, o)
    def __floordiv__(FloatNum self, o): return self.__op(YASM_EXPR_SIGNDIV, o)
    def __mod__(FloatNum self, o): return self.__op(YASM_EXPR_SIGNMOD, o)
    def __neg__(FloatNum self): return self.__op(YASM_EXPR_NEG, o)
    def __pos__(FloatNum self): return self
    #def __abs__(FloatNum self): return self
    #def __nonzero__(FloatNum self): return not yasm_floatnum_is_zero(self.intn)
    def __invert__(FloatNum self): return self.__op(YASM_EXPR_NOT, o)
    #def __lshift__(FloatNum self, o)
    #def __rshift__(FloatNum self, o)
    def __and__(FloatNum self, o): return self.__op(YASM_EXPR_AND, o)
    def __or__(FloatNum self, o): return self.__op(YASM_EXPR_OR, o)
    def __xor__(FloatNum self, o): return self.__op(YASM_EXPR_XOR, o)

cdef class Expression:
    cdef yasm_expr *expr
    cdef yasm_expr_op op

    def __new__(self, op, a, b, line, *args, **kw):
        self.expr = NULL
        op = __op.get(op, op)

        self.expr = yasm_expr_create(op,
                self.__new_item(a),
                self.__new_item(b),
                line)

    cdef yasm_expr__item* __new_item(self, value) except NULL:
        if isinstance(value, Expression):
            return yasm_expr_expr((<Expression>value).expr)
        elif isinstance(value, Symbol):
            return yasm_expr_sym((<Symbol>value).sym)
        elif isinstance(value, Register):
            return yasm_expr_reg((<Register>value).reg)
        elif isinstance(value, float):
            return yasm_expr_float((<FloatNum>value).flt)
        elif isinstance(value, IntNum):
            return yasm_expr_int(yasm_intnum_copy((<IntNum>value).intn))
        else:
            try:
                intnum = IntNum(value)
            except:
                raise ValueError("Invalid item value type '%s'" % type(value))
            else:
                return yasm_expr_int(yasm_intnum_copy((<IntNum>intnum).intn))

    def __dealloc__(self):
        if self.expr != NULL: yasm_expr_destroy(self.expr)

cdef class SymbolTable:
    cdef yasm_symtab *symtab
    def __new__(self):
        self.symtab = yasm_symtab_create()

    def __dealloc__(self):
        if self.symtab != NULL: yasm_symtab_destroy(self.symtab)

    def use(self, name, line):
        return self.__make_symbol(name,
            yasm_symtab_use(self.symtab, name, line))

    def define_equ(self, name, expr, line):
        return self.__make_symbol(name,
            yasm_symtab_define_equ(self.symtab, name, (<Expression>expr).expr, line))

    def define_label(self, name, precbc, in_table, line):
        return self.__make_symbol(name,
            yasm_symtab_define_label(self.symtab, name, (<Bytecode>precbc).bc,
                in_table, line))
        #define2 goes on bytecode

    def define_special(self, name, vis):
        return self.__make_symbol(name,
            yasm_symtab_define_special(self.symtab, name, vis))

    def declare(self, name, vis, line):
        return self.__make_symbol(name,
            yasm_symtab_declare(self.symtab, name, vis, line))

    #def traverse(self, func, *args, **kw):
    #    return yasm_symtab_traverse(self.symtab, (args, kw), func)

    def parser_finalize(self, undef_extern, objfmt):
        yasm_symtab_parser_finalize(self.symtab, undef_extern,
                (<ObjectFormat>objfmt).objfmt)

    cdef object __make_symbol(self, name, yasm_symrec *symrec):
        cdef Symbol sym
        sym = Symbol(name)
        sym.sym = symrec
        return sym

cdef class Symbol:
    cdef yasm_symrec *sym

    def __new__(self, name):
        self.sym = NULL

    # no deref or destroy necessary

    def get_name(self): return yasm_symrec_get_name(self.sym)
    def get_visibility(self): return yasm_symrec_get_visibility(self.sym)
    def get_equ(self):
        return self.__make_expression(yasm_symrec_get_equ(self.sym))
    def get_label(self):
        cdef yasm_symrec_get_label_bytecodep bc
        if yasm_symrec_get_label(self.sym, &bc): pass # TODO
            #return Bytecode(bc)
        else: raise TypeError("Symbol '%s' is not a label" % self.get_name())

    def get_is_special(self):
        return yasm_symrec_is_special(self.sym)

    def get_data(self): pass # TODO
        #return <object>(yasm_symrec_get_data(self.sym, PyYasmAssocData))

    def set_data(self, data): pass # TODO
        #yasm_symrec_set_data(self.sym, PyYasmAssocData, data)

    cdef object __make_expression(self, yasm_expr *expr):
        cdef Expression e
        e = Expression()
        e.expr = expr
        return e

cdef class Bytecode:
    cdef yasm_bytecode *bc

cdef class ObjectFormat:
    cdef yasm_objfmt *objfmt

#cdef class DataVal:
#    cdef yasm_dataval *dv
#
#    def __new__(self, string_or_expr):
#        if isinstance(string_or_expr, Expression):
#            self.dv = yasm_dv_create_expr(string_or_expr)
#        else:
#            self.dv = yasm_dv_create_string(string_or_expr,
#                    len(string_or_expr))
#
#    #def __dealloc__(self):
#        #yasm_dv_destroy(self.dv)

#######################################
def __initialize():
    BitVector_Boot()
    yasm_intnum_initialize()
    yasm_floatnum_initialize()

def __cleanup():
    yasm_floatnum_cleanup()
    yasm_intnum_cleanup()
    BitVector_Shutdown()

__initialize()
import atexit
atexit.register(__cleanup)

import operator
__op = {
    operator.__add__ : YASM_EXPR_ADD,
    operator.add : YASM_EXPR_ADD,
    operator.__and__ : YASM_EXPR_AND,
    operator.and_ : YASM_EXPR_AND,
    operator.__div__ : YASM_EXPR_SIGNDIV,
    operator.__floordiv__: YASM_EXPR_SIGNDIV,
    operator.div : YASM_EXPR_SIGNDIV,
    operator.floordiv: YASM_EXPR_SIGNDIV,
    operator.__ge__: YASM_EXPR_GE,
    operator.ge: YASM_EXPR_GE,
    operator.__gt__: YASM_EXPR_GT,
    operator.gt: YASM_EXPR_GT,
    operator.__inv__: YASM_EXPR_NOT,
    operator.__invert__: YASM_EXPR_NOT,
    operator.inv: YASM_EXPR_NOT,
    operator.invert: YASM_EXPR_NOT,
    operator.__le__: YASM_EXPR_LE,
    operator.le: YASM_EXPR_LE,
    operator.__lt__: YASM_EXPR_LT,
    operator.lt: YASM_EXPR_LT,
    operator.__mod__: YASM_EXPR_SIGNMOD,
    operator.mod: YASM_EXPR_SIGNMOD,
    operator.__mul__: YASM_EXPR_MUL,
    operator.mul: YASM_EXPR_MUL,
    operator.__neg__: YASM_EXPR_NEG,
    operator.neg: YASM_EXPR_NEG,
    operator.__not__: YASM_EXPR_LNOT,
    operator.not_: YASM_EXPR_LNOT,
    operator.__or__: YASM_EXPR_OR,
    operator.or_: YASM_EXPR_OR,
    operator.__sub__: YASM_EXPR_SUB,
    operator.sub: YASM_EXPR_SUB,
    operator.__xor__: YASM_EXPR_XOR,
    operator.xor: YASM_EXPR_XOR,
}
del operator

#######################################
